fix text overflow on modals and mappage, fixed colours of select menus

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -63,11 +63,20 @@ a.mapboxgl-ctrl-logo {
 
 .modal-content {
   max-width: 90%;
-  .input {
-    background-color: $dark;
-  }
+
   i {
     color: white;
+  }
+
+  .input, select {
+    background-color: $dark;
+    color: $gold;
+  }
+ 
+  .title, .subtitle {
+    white-space: pre-wrap;
+    text-overflow: wrap;
+    max-width: 100%;
   }
 }
 
@@ -121,6 +130,17 @@ a.mapboxgl-ctrl-logo {
 #homepage, #mappage {
 
   max-height: 100vh;
+
+
+  .title, .subtitle {
+    white-space: pre-wrap;
+    text-overflow: wrap;
+    max-width: 100%;
+  }
+
+  .column .container {
+    max-width: 100%;
+  }
 
   .columns {
     width: 100%;
